# mydlp-endpoint-linux

./: .gitignore  .gitmodules  Makefile.am  README  bootstrap.sh  configure.ac.tmpl  engine.Makefile.am
debian/: changelog.tmpl  control  mydlp-endpoint-linux.cron  mydlp-endpoint-linux.default  mydlp-endpoint-linux.dirs  mydlp-endpoint-linux.init  mydlp-endpoint-linux.postinst  rules
src/: Makefile.am
src/agent/: .gitignore  Makefile.am  dynamic_compile.erl  mime_util.erl  mydlp-sasl.config  mydlp.app.in  mydlp.conf  mydlp.hrl  mydlp.rel.in  mydlp_acceptor.erl  mydlp_acl.erl  mydlp_acl.hrl  mydlp_api.erl  mydlp_app.erl  mydlp_big_binary.hrl  mydlp_container.erl  mydlp_discover_fs.erl  mydlp_dynamic.erl  mydlp_fsm.erl  mydlp_item_push.erl  mydlp_logger.erl  mydlp_logger.hrl  mydlp_logger_file.erl  mydlp_logger_syslog.erl  mydlp_macro.hrl  mydlp_matchers.erl  mydlp_mc.erl  mydlp_mnesia.erl  mydlp_nlp.erl  mydlp_pdm.erl  mydlp_pool.erl  mydlp_regex.erl  mydlp_schema.hrl  mydlp_seap_fsm.erl  mydlp_smtp.hrl  mydlp_spool.erl  mydlp_sup.erl  mydlp_sync.erl  mydlp_tc.erl  mydlp_trapper.erl  (+3 more)
src/filterfs/: Makefile.am  memory.py  mydlp-mount-filterfs.py  mydlpfilterfs.py  mydlpfilterfs2.py  mydlpfuse.py
src/printer/: Makefile.am  README  maincups.py  mydlp-cups-daemon.py  mydlp-cups-filter.py  mydlp-cups-pdf  mydlpdaemon.py  testcups
src/script/: Makefile.am  mydlp-agent-version  mydlp-log  mydlp-logged-on-domain  mydlp-logged-on-user  mydlp-mount-filterfs  mydlp-watchdog
src/sysconf/: Makefile.am
src/sysconf/logrotate/: Makefile.am
src/sysconf/rsyslog/: mydlp.conf
(+4 files in other folders)
