#sbin_SCRIPTS = \
#	mydlp-agent-version \
#	mydlp-mount-filterfs \
#	mydlp-backend-ctl \
#	mydlp-log \
#	mydlp-logged-on-domain \
#	mydlp-logged-on-user \
#	mydlp-watchdog

sbin_SCRIPTS = \
	mydlp-agent-version \
	mydlp-backend-ctl \
	mydlp-log \
	mydlp-logged-on-domain \
	mydlp-logged-on-user \
	mydlp-watchdog
